[package]
name = "ironrdp-propertyset"
version = "0.1.0"
readme = "README.md"
description = "A key-value store for configuration options"
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
doctest = false
test = false

[dependencies]
tracing = { version = "0.1", features = ["log"] }
